# ComputerVision-Lecture

./: README.md
cv07/src/: train_mnist.py  visualize.py
cv08/src/: cnn.py
midterm_assignment/: README.md  make_panorama.spec  make_specialeffect.spec  pyproject.toml
midterm_assignment/pano_project/: README.md  pyproject.toml  requirements.txt
midterm_assignment/se_project/: README.md  pyproject.toml  requirements.txt
midterm_assignment/src/: make_panorama.py  make_specialeffect.py
vision_agent/: README.md  app.py
week04/: first_cv.py  project_a.py  second_cv.py  third_cv.py
