[tool.poetry]
name = "make_panorama.py"
version = "0.1.0"
description = "웹캠 비디오에서 파노라마 이미지를 수집하고 봉합하는 PyQt6 애플리케이션입니다."
authors = ["장창호 <awakeev.d@gmail.com>"]
license = 

[tool.poetry.dependencies]
python = "3.11.10"  # 현재 Python 버전
opencv-python = "4.10.0"  # 현재 OpenCV 버전
numpy = "2.1.3"  # 현재 NumPy 버전
PyQt6 = "6.7.1"  # 현재 PyQt6 버전

[build-system]
requires = 
build-backend = 